--- a/assets/css/basic.scss
+++ b/assets/css/basic.scss
@@ -301,7 +301,7 @@ header.header {
 }
 // Feedback
 .feedback {
-  padding: 96px 135px;
+  padding: 96px 0;
   background: #2e2100;
   .container {
     .row {
@@ -344,6 +344,166 @@ header.header {
           line-height: 1.54;
           color: #ffffff;
         }
+      }
+    }
+  }
+}
+// Course results
+.Course-results {
+  padding: 200px 0;
+  .container {
+    .row {
+      display: flex;
+      .img-block {
+        display: flex;
+        width: 50%;
+        gap: 30px;
+        .image-reults {
+          // height: 404px;
+          margin-top: 34px;
+        }
+        .image-reults:last-child {
+          margin-top: 0;
+          margin-bottom: 33px;
+        }
+      }
+      .img-second {
+        margin-left: auto;
+      }
+      .content {
+        width: 50%;
+        padding: 43px 0px 43px 113px;
+        .title {
+          margin-bottom: 16px;
+          font-family: "Sen";
+          font-weight: 700;
+          font-size: 3.8rem;
+          line-height: 1.26;
+          letter-spacing: -0.02em;
+          color: #171100;
+        }
+        .desc {
+          font-weight: 400;
+          font-size: 1.6rem;
+          line-height: 1.75;
+          color: #5f5b53;
+          &:nth-child(3) {
+            margin-top: 40px;
+          }
+        }
+        .btn {
+          margin-top: 38px;
+          border: 1px solid #ffb900;
+          padding: 10px 37px;
+          background: #ffb900;
+        }
+      }
+      .second {
+        padding: 67px 0px 69px;
+      }
+      &:last-child {
+        padding-top: 200px;
+      }
+    }
+  }
+}
+// Our Blog
+.our-blog {
+  padding: 96px 0px 102px;
+  background: #fffcf4;
+  .container {
+    // no code here
+
+    .headding {
+      text-align: center;
+      padding: 0px 361px;
+      h2.title {
+        font-family: "Sen";
+        font-weight: 700;
+        font-size: 3.8rem;
+        line-height: 1.26;
+        text-align: center;
+        letter-spacing: -0.02em;
+        color: #130606;
+      }
+      p.desc {
+        margin: 16px 0px 55px;
+        font-weight: 400;
+        font-size: 1.6rem;
+        line-height: 1.75;
+        text-align: center;
+        color: #696262;
+      }
+    }
+
+    .our-blog-cards {
+      display: flex;
+      gap: 30px;
+      > a {
+        img {
+          object-fit: cover;
+          border-radius: 16px 16px 0px 0px;
+        }
+      }
+      .content {
+        background: #ffffff;
+        padding: 20px 20px 28px 20px;
+        border-radius: 0px 0px 16px 16px;
+        .row {
+          display: flex;
+          align-items: center;
+          gap: 5px;
+          i {
+            font-size: 6px;
+            color: #ffb900;
+          }
+          span.date {
+            position: relative;
+            font-weight: 400;
+            font-size: 1.4rem;
+            line-height: 1.86;
+            color: #5f5b53;
+          }
+        }
+        h3.title a {
+          display: inline-block;
+          margin-top: 25px;
+          position: relative;
+          text-decoration: none;
+          font-weight: 600;
+          font-size: 1.6rem;
+          line-height: 1.75;
+          color: #171100;
+          &::after {
+            content: "";
+            position: absolute;
+            top: -16px;
+            left: 0;
+            width: 160px;
+            height: 1px;
+            background: #e2dfda;
+          }
+        }
+        button.read-more {
+          margin-top: 14px;
+          padding: 10px 14px;
+        }
+        .read-first {
+          background: #ffb900;
+          border: 1px solid #ffb900;
+        }
+      }
+    }
+
+    .dot-line {
+      margin-top: 38px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 6px;
+      i {
+        font-size: 6px;
+        color: #ffb900;
       }
     }
   }
